--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,11 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
+    "react-text-mask": "^5.1.0",
     "redux": "^3.7.2",
     "redux-axios-middleware": "^4.0.0",
-    "redux-form": "^7.0.3"
+    "redux-form": "^7.0.3",
+    "text-mask-addons": "^3.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
